[package]
name = "ecosystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["macros", "rt", "rt-multi-thread"] }
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
