[package]
name = "ecosystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
base64 = "0.22.1"
blake3 = "1.5.4"
bytes = "1.7.2"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.38", features = ["serde"] }
derive_more = { version = "1.0.0", features = ["full"] }
opentelemetry = "0.22.0"
opentelemetry-otlp = { version = "0.15.0", features = ["tonic"] }
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_with = "3.9.0"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.58"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
# loom = "0.7.2"
chrono = "0.4.38"
derive_builder = "0.20.1"
axum = { version = "0.7.7", features = ["http2", "query", "tracing"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["fs", "rt", "rt-multi-thread", "macros"] }
dashmap = "6.1.0"
tokio-stream = "0.1.16"
tokio-util = { version = "0.7.12", features = ["codec"] }
futures = "0.3.31"
console-subscriber = "0.4.0"
